--- a/package.json
+++ b/package.json
@@ -1,15 +1,43 @@
 {
-  "name": "ecommerce_ts",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "ecommerce_ts",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "directories": {
+        "doc": "docs"
+    },
+    "scripts": {
+        "build": "tsc",
+        "start": "node dist/server.js",
+        "dev": "nodemon server.ts",
+        "test": "jest"
+    },
+    "jest": {
+        "preset": "ts-jest",
+        "testEnvironment": "node"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "helmet": "^7.1.0",
+        "mongoose": "^8.5.1",
+        "morgan": "^1.10.0"
+    },
+    "devDependencies": {
+        "@types/compression": "^1.7.5",
+        "@types/express": "^4.17.21",
+        "@types/jest": "^29.5.12",
+        "@types/morgan": "^1.9.9",
+        "@types/node": "^20.14.11",
+        "jest": "^29.7.0",
+        "nodemon": "^3.1.4",
+        "ts-jest": "^29.2.2",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.5.3"
+    }
 }
