--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
         "build": "tsc",
         "start": "node dist/server.js",
         "dev": "nodemon server.ts",
-        "test": "jest",
-        "execute": "ts-node ./src/configs/config.ts"
+        "test": "jest"
     },
     "jest": {
         "preset": "ts-jest",
