--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "build": "tsc",
         "start": "node dist/server.js",
         "dev": "nodemon server.ts",
+        "prof": "node --prof dist/server.js",
         "test": "jest"
     },
     "jest": {
